k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: genesis-staging
  name: genesis-api-auth
  labels:
    app: genesis-api-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genesis-api-auth
  template:
    metadata:
      labels:
        app: genesis-api-auth
    spec:
      containers:
      - name: genesis-api-auth
        image: sa-saopaulo-1.ocir.io/grj9gtpq5dke/genesis-api-auth:${CI_COMMIT_BRANCH}-${CI_PIPELINE_ID}
        ports:
        - containerPort: 8001
      imagePullSecrets:
        - name: oc-integrada
