k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: genesis-staging
  name: genesis-api-auth
spec:
  selector:
    app: genesis-api-auth
  ports:
    - protocol: TCP
      port: 8001
